fix anchor tag overflowing

--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -18,11 +18,11 @@
 }
 
 .post a {
-    width: fit-content;
+   
 }
 .content {
     display: flex;
-    flex: 9;
+    flex: 8;
     max-width: 100%;
     flex-direction: column;
 }
@@ -39,9 +39,15 @@
 .post-info > a {
     font-size: .9rem;
 }
+
+.post-link {
+    width: 90%;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .post-media {
     display: block;
-    max-height: fit-content;
     max-width: 594px;
     width: 90%;
     margin: 0px auto;
